[gd_scene load_steps=20 format=2]

[ext_resource path="res://code/character/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/CharacterUIFont.tres" type="Theme" id=2]
[ext_resource path="res://assets/sprites/circle_05.png" type="Texture" id=3]
[ext_resource path="res://assets/sfx/ores/pickup.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sprites/player/forge_bar_over.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/player/forge_bar_progress.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/player/forge_bar_under.png" type="Texture" id=7]
[ext_resource path="res://code/character/ForgeUI.gd" type="Script" id=8]
[ext_resource path="res://assets/fonts/ForgeUI.tres" type="Theme" id=9]
[ext_resource path="res://assets/sfx/forging/forged.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sfx/forging/correct_hit.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sfx/forging/false_hit.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sprites/enemy/template.png" type="Texture" id=13]
[ext_resource path="res://code/character/UI.gd" type="Script" id=14]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.454545, 0.0100852 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.936364 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.15, 0.15, 0.15, 0.901961 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.69, 0.69, 0.69, 0.941176 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Tools:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LoseBody:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.137255, 0.419608, 0.815686, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LoseBody:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "Transform"
tracks/0/type = "value"
tracks/0/path = NodePath("Tools:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LoseBody:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.137255, 0.419608, 0.815686, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LoseBody:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="KinematicBody2D" type="KinematicBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 13
script = ExtResource( 1 )

[node name="Tools" type="Node2D" parent="."]

[node name="Secondary" type="Node2D" parent="."]
position = Vector2( 0, 12 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 0.652
margin_left = -19.0
margin_top = -10.0
margin_right = 19.0
margin_bottom = 10.0
color = Color( 0.137255, 0.419608, 0.815686, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="LoseBody" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="LoseBody"]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 13 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="LoseBody"]
amount = 10
lifetime = 0.4
explosiveness = 0.1
local_coords = false
emission_shape = 1
emission_sphere_radius = 15.0
gravity = Vector2( 0, 0 )
linear_accel = 200.0
linear_accel_random = 0.3
radial_accel = 5.0
radial_accel_random = 0.2
scale_amount = 3.0
scale_amount_curve = SubResource( 3 )
color = Color( 1, 0.956667, 0.48, 1 )

[node name="Light2D2" type="Light2D" parent="LoseBody"]
position = Vector2( -1, 0 )
texture = ExtResource( 3 )
texture_scale = 0.8
color = Color( 1, 0.992157, 0.45098, 1 )
energy = 0.8

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
smoothing_speed = 6.0

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 14 )

[node name="Control" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Resources" type="HBoxContainer" parent="UI/Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -240.0
margin_top = 40.0
margin_right = -50.0
margin_bottom = 111.0
grow_horizontal = 0
custom_constants/separation = 10
alignment = 1

[node name="Iron" type="VBoxContainer" parent="UI/Control/Resources"]
margin_right = 30.0
margin_bottom = 71.0
alignment = 1

[node name="ColorRect" type="ColorRect" parent="UI/Control/Resources/Iron"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
color = Color( 0.23, 0.1863, 0.0989, 1 )

[node name="Label" type="Label" parent="UI/Control/Resources/Iron"]
margin_top = 34.0
margin_right = 30.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "0"
align = 1

[node name="Copper" type="VBoxContainer" parent="UI/Control/Resources"]
margin_left = 40.0
margin_right = 70.0
margin_bottom = 71.0
alignment = 1

[node name="ColorRect" type="ColorRect" parent="UI/Control/Resources/Copper"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
color = Color( 1, 0.6, 0.368627, 1 )

[node name="Label" type="Label" parent="UI/Control/Resources/Copper"]
margin_top = 34.0
margin_right = 30.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "0"
align = 1

[node name="Tin" type="VBoxContainer" parent="UI/Control/Resources"]
margin_left = 80.0
margin_right = 110.0
margin_bottom = 71.0
alignment = 1

[node name="ColorRect" type="ColorRect" parent="UI/Control/Resources/Tin"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
color = Color( 0.701961, 0.701961, 0.701961, 1 )

[node name="Label" type="Label" parent="UI/Control/Resources/Tin"]
margin_top = 34.0
margin_right = 30.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "0"
align = 1

[node name="Bronze" type="VBoxContainer" parent="UI/Control/Resources"]
margin_left = 120.0
margin_right = 150.0
margin_bottom = 71.0
alignment = 1

[node name="ColorRect" type="ColorRect" parent="UI/Control/Resources/Bronze"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
color = Color( 1, 0.760784, 0.4, 1 )

[node name="Label" type="Label" parent="UI/Control/Resources/Bronze"]
margin_top = 34.0
margin_right = 30.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "0"
align = 1

[node name="Magic" type="VBoxContainer" parent="UI/Control/Resources"]
margin_left = 160.0
margin_right = 190.0
margin_bottom = 71.0
alignment = 1

[node name="ColorRect" type="ColorRect" parent="UI/Control/Resources/Magic"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
color = Color( 0.741176, 0.6, 1, 1 )

[node name="Label" type="Label" parent="UI/Control/Resources/Magic"]
margin_top = 34.0
margin_right = 30.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "0"
align = 1

[node name="Tools" type="HBoxContainer" parent="UI/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -49.0
margin_right = 20.0
margin_bottom = -9.0
alignment = 1

[node name="ForgeUI" type="PanelContainer" parent="UI/Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -160.5
margin_right = 140.0
margin_bottom = 160.5
custom_styles/panel = SubResource( 2 )
script = ExtResource( 8 )

[node name="Panel" type="Panel" parent="UI/Control/ForgeUI"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 223.0
margin_bottom = 75.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/ForgeUI"]
margin_left = 2.0
margin_top = 2.0
margin_right = 278.0
margin_bottom = 319.0
custom_constants/separation = 30
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="UI/Control/ForgeUI/VBoxContainer"]
margin_top = 41.0
margin_right = 276.0
margin_bottom = 85.0

[node name="TextureProgress" type="TextureProgress" parent="UI/Control/ForgeUI/VBoxContainer/CenterContainer"]
margin_left = 30.0
margin_right = 246.0
margin_bottom = 44.0
size_flags_horizontal = 3
texture_under = ExtResource( 7 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="UI/Control/ForgeUI/VBoxContainer/CenterContainer/TextureProgress"]
margin_left = 145.0
margin_top = 3.0
margin_right = 149.0
margin_bottom = 43.0
color = Color( 0.61625, 0.85, 0.3825, 1 )

[node name="Label" type="Label" parent="UI/Control/ForgeUI/VBoxContainer"]
margin_top = 115.0
margin_right = 276.0
margin_bottom = 140.0
theme = ExtResource( 9 )
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/ForgeUI/VBoxContainer"]
margin_top = 170.0
margin_right = 276.0
margin_bottom = 275.0
custom_constants/separation = 10
alignment = 1

[node name="ForgeChoice" type="HBoxContainer" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer"]
margin_right = 276.0
margin_bottom = 31.0
alignment = 1

[node name="Hammer" type="Button" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/ForgeChoice"]
margin_left = 5.0
margin_right = 97.0
margin_bottom = 31.0
focus_neighbour_right = NodePath("../Pickaxe")
focus_neighbour_bottom = NodePath("../../Resources/Iron/IronOre")
theme = ExtResource( 9 )
text = "Hammer"

[node name="Pickaxe" type="Button" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/ForgeChoice"]
margin_left = 101.0
margin_right = 191.0
margin_bottom = 31.0
focus_neighbour_left = NodePath("../Hammer")
focus_neighbour_right = NodePath("../SledgeHammer")
focus_neighbour_bottom = NodePath("../../Resources/Iron/IronOre")
theme = ExtResource( 9 )
text = "Pickaxe"

[node name="SledgeHammer" type="Button" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/ForgeChoice"]
margin_left = 195.0
margin_right = 271.0
margin_bottom = 31.0
focus_neighbour_left = NodePath("../Pickaxe")
focus_neighbour_bottom = NodePath("../../Resources/Iron/IronOre")
theme = ExtResource( 9 )
text = "Sledge"

[node name="Resources" type="HBoxContainer" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 276.0
margin_bottom = 71.0
custom_constants/separation = 10
alignment = 1

[node name="Iron" type="VBoxContainer" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources"]
margin_left = 43.0
margin_right = 73.0
margin_bottom = 30.0
alignment = 1

[node name="IronOre" type="Button" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources/Iron"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
focus_neighbour_top = NodePath("../../../ForgeChoice/Hammer")
focus_neighbour_right = NodePath("../../Copper/CopperOre")
mouse_default_cursor_shape = 2

[node name="ColorRect" type="ColorRect" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources/Iron/IronOre"]
margin_left = 5.0
margin_top = 5.0
margin_right = 25.0
margin_bottom = 25.0
mouse_filter = 1
color = Color( 0.45098, 0.45098, 0.45098, 1 )

[node name="Label" type="Label" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources/Iron"]
visible = false
margin_top = 34.0
margin_right = 30.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "0"
align = 1

[node name="Copper" type="VBoxContainer" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources"]
margin_left = 83.0
margin_right = 113.0
margin_bottom = 30.0
alignment = 1

[node name="CopperOre" type="Button" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources/Copper"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
focus_neighbour_left = NodePath("../../Iron/IronOre")
focus_neighbour_top = NodePath("../../../ForgeChoice/Hammer")
focus_neighbour_right = NodePath("../../Tin/TinOre")
mouse_default_cursor_shape = 2

[node name="ColorRect" type="ColorRect" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources/Copper/CopperOre"]
margin_left = 5.0
margin_top = 5.0
margin_right = 25.0
margin_bottom = 25.0
mouse_filter = 1
color = Color( 1, 0.6, 0.368627, 1 )

[node name="Label" type="Label" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources/Copper"]
visible = false
margin_top = 34.0
margin_right = 30.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "0"
align = 1

[node name="Tin" type="VBoxContainer" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources"]
margin_left = 123.0
margin_right = 153.0
margin_bottom = 30.0
alignment = 1

[node name="TinOre" type="Button" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources/Tin"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
focus_neighbour_left = NodePath("../../Copper/CopperOre")
focus_neighbour_top = NodePath("../../../ForgeChoice/Hammer")
focus_neighbour_right = NodePath("../../Bronze/BronzeOre")
mouse_default_cursor_shape = 2

[node name="ColorRect" type="ColorRect" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources/Tin/TinOre"]
margin_left = 5.0
margin_top = 5.0
margin_right = 25.0
margin_bottom = 25.0
mouse_filter = 1
color = Color( 0.701961, 0.701961, 0.701961, 1 )

[node name="Label" type="Label" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources/Tin"]
visible = false
margin_top = 34.0
margin_right = 30.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "0"
align = 1

[node name="Bronze" type="VBoxContainer" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources"]
margin_left = 163.0
margin_right = 193.0
margin_bottom = 30.0
alignment = 1

[node name="BronzeOre" type="Button" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources/Bronze"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
focus_neighbour_left = NodePath("../../Tin/TinOre")
focus_neighbour_top = NodePath("../../../ForgeChoice/Hammer")
mouse_default_cursor_shape = 2

[node name="ColorRect" type="ColorRect" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources/Bronze/BronzeOre"]
margin_left = 5.0
margin_top = 5.0
margin_right = 25.0
margin_bottom = 25.0
mouse_filter = 1
color = Color( 1, 0.760784, 0.4, 1 )

[node name="Label" type="Label" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources/Bronze"]
visible = false
margin_top = 34.0
margin_right = 30.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "0"
align = 1

[node name="Magic" type="VBoxContainer" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources"]
margin_left = 203.0
margin_right = 233.0
margin_bottom = 30.0
alignment = 1

[node name="MagicOre" type="Button" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources/Magic"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
focus_neighbour_left = NodePath("../../Tin/TinOre")
focus_neighbour_top = NodePath("../../../ForgeChoice/Hammer")
mouse_default_cursor_shape = 2

[node name="ColorRect" type="ColorRect" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources/Magic/MagicOre"]
margin_left = 5.0
margin_top = 5.0
margin_right = 25.0
margin_bottom = 25.0
mouse_filter = 1
color = Color( 0.741176, 0.6, 1, 1 )

[node name="Label" type="Label" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources/Magic"]
visible = false
margin_top = 34.0
margin_right = 30.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "0"
align = 1

[node name="Recipe" type="HBoxContainer" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 276.0
margin_bottom = 105.0
alignment = 1

[node name="CheckBox" type="CheckBox" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Recipe"]
margin_left = 112.0
margin_right = 136.0
margin_bottom = 24.0
disabled = true

[node name="CheckBox2" type="CheckBox" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Recipe"]
margin_left = 140.0
margin_right = 164.0
margin_bottom = 24.0
disabled = true

[node name="Recipe2" type="HBoxContainer" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer"]
visible = false
margin_top = 115.0
margin_right = 276.0
margin_bottom = 139.0
alignment = 1

[node name="CheckBox" type="CheckBox" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Recipe2"]
margin_left = 84.0
margin_right = 108.0
margin_bottom = 24.0
disabled = true

[node name="CheckBox2" type="CheckBox" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Recipe2"]
margin_left = 112.0
margin_right = 136.0
margin_bottom = 24.0
disabled = true

[node name="CheckBox3" type="CheckBox" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Recipe2"]
margin_left = 140.0
margin_right = 164.0
margin_bottom = 24.0
disabled = true

[node name="CheckBox4" type="CheckBox" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Recipe2"]
margin_left = 168.0
margin_right = 192.0
margin_bottom = 24.0
disabled = true

[node name="Recipe3" type="HBoxContainer" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer"]
visible = false
margin_top = 115.0
margin_right = 276.0
margin_bottom = 139.0
alignment = 1

[node name="CheckBox" type="CheckBox" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Recipe3"]
margin_left = 56.0
margin_right = 80.0
margin_bottom = 24.0
disabled = true

[node name="CheckBox2" type="CheckBox" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Recipe3"]
margin_left = 84.0
margin_right = 108.0
margin_bottom = 24.0
disabled = true

[node name="CheckBox3" type="CheckBox" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Recipe3"]
margin_left = 112.0
margin_right = 136.0
margin_bottom = 24.0
disabled = true

[node name="CheckBox4" type="CheckBox" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Recipe3"]
margin_left = 140.0
margin_right = 164.0
margin_bottom = 24.0
disabled = true

[node name="CheckBox5" type="CheckBox" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Recipe3"]
margin_left = 168.0
margin_right = 192.0
margin_bottom = 24.0
disabled = true

[node name="CheckBox6" type="CheckBox" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Recipe3"]
margin_left = 196.0
margin_right = 220.0
margin_bottom = 24.0
disabled = true

[node name="CheckBox7" type="CheckBox" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Recipe3"]
margin_left = 196.0
margin_right = 220.0
margin_bottom = 24.0
disabled = true

[node name="CheckBox8" type="CheckBox" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Recipe3"]
margin_left = 196.0
margin_right = 220.0
margin_bottom = 24.0
disabled = true

[node name="CheckBox9" type="CheckBox" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Recipe3"]
margin_left = 196.0
margin_right = 220.0
margin_bottom = 24.0
disabled = true

[node name="CheckBox10" type="CheckBox" parent="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Recipe3"]
margin_left = 196.0
margin_right = 220.0
margin_bottom = 24.0
disabled = true

[node name="Close" type="Button" parent="UI/Control/ForgeUI/VBoxContainer"]
visible = false
margin_top = 275.0
margin_right = 276.0
margin_bottom = 306.0
grow_horizontal = 2
focus_neighbour_top = NodePath("../VBoxContainer/Resources/Iron/IronOre")
focus_neighbour_right = NodePath("../VBoxContainer/Resources/Copper/CopperOre")
theme = ExtResource( 9 )
text = "Close"
icon_align = 1
expand_icon = true

[node name="CorrectHit" type="AudioStreamPlayer" parent="UI/Control/ForgeUI"]
stream = ExtResource( 12 )

[node name="FalseHit" type="AudioStreamPlayer" parent="UI/Control/ForgeUI"]
stream = ExtResource( 11 )

[node name="Forged" type="AudioStreamPlayer" parent="UI/Control/ForgeUI"]
stream = ExtResource( 10 )
volume_db = 4.0

[node name="LoseUI" type="PanelContainer" parent="UI/Control"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -160.5
margin_right = 140.0
margin_bottom = 160.5
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/LoseUI"]
margin_left = 2.0
margin_top = 2.0
margin_right = 321.0
margin_bottom = 319.0
custom_constants/separation = 50
alignment = 1

[node name="message" type="Label" parent="UI/Control/LoseUI/VBoxContainer"]
margin_top = 99.0
margin_right = 319.0
margin_bottom = 136.0
theme = ExtResource( 2 )
text = "You Lost Your Sanity"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control/LoseUI/VBoxContainer"]
margin_top = 186.0
margin_right = 319.0
margin_bottom = 217.0
theme = ExtResource( 9 )
alignment = 1

[node name="Retry" type="Button" parent="UI/Control/LoseUI/VBoxContainer/HBoxContainer"]
margin_left = 89.0
margin_right = 163.0
margin_bottom = 31.0
focus_neighbour_right = NodePath("../Home")
text = "Retry"

[node name="Home" type="Button" parent="UI/Control/LoseUI/VBoxContainer/HBoxContainer"]
margin_left = 167.0
margin_right = 230.0
margin_bottom = 31.0
focus_neighbour_left = NodePath("../Retry")
text = "Menu"

[node name="Pickup" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 15.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/Transform = SubResource( 4 )

[connection signal="visibility_changed" from="UI/Control/ForgeUI" to="UI/Control/ForgeUI" method="_on_ForgeUI_visibility_changed"]
[connection signal="pressed" from="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/ForgeChoice/Hammer" to="UI/Control/ForgeUI" method="_on_Hammer_pressed"]
[connection signal="pressed" from="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/ForgeChoice/Pickaxe" to="UI/Control/ForgeUI" method="_on_Pickaxe_pressed"]
[connection signal="pressed" from="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/ForgeChoice/SledgeHammer" to="UI/Control/ForgeUI" method="_on_SledgeHammer_pressed"]
[connection signal="pressed" from="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources/Iron/IronOre" to="UI/Control/ForgeUI" method="_on_IronOre_pressed"]
[connection signal="pressed" from="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources/Copper/CopperOre" to="UI/Control/ForgeUI" method="_on_CopperOre_pressed"]
[connection signal="pressed" from="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources/Tin/TinOre" to="UI/Control/ForgeUI" method="_on_TinOre_pressed"]
[connection signal="pressed" from="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources/Bronze/BronzeOre" to="UI/Control/ForgeUI" method="_on_BronzeOre_pressed"]
[connection signal="pressed" from="UI/Control/ForgeUI/VBoxContainer/VBoxContainer/Resources/Magic/MagicOre" to="UI/Control/ForgeUI" method="_on_MagicOre_pressed"]
[connection signal="pressed" from="UI/Control/ForgeUI/VBoxContainer/Close" to="UI/Control/ForgeUI" method="_on_Close_pressed"]
[connection signal="pressed" from="UI/Control/LoseUI/VBoxContainer/HBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="UI/Control/LoseUI/VBoxContainer/HBoxContainer/Home" to="." method="_on_Home_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
